# lexicographical-integers

./: LICENSE  README.md  lexicographic-integers.cabal
src/Data/Int/Encoding/: Lexicographic.hs
test/: Properties.hs
