name:                lexicographic-integers
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              William Sykes Fisher
maintainer:          williamsykesfisher@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Int.Encoding.Lexicographic
  build-depends:       base >=4.12 && <4.13
                     , bytestring
                     , base16-bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite lexicographic-integers-properties
    type:              exitcode-stdio-1.0
    main-is:           Properties.hs
    hs-source-dirs:    test
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
    build-depends:     base >=4.12 && <4.13
                     , lexicographic-integers
                     , QuickCheck
    default-language:  Haskell2010

